Setting up the application to run Spring Boot and tests.

--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 		<!-- MySQL5 JDBC dependency (parent inherited) -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
-		
+
 		<!-- JUnit dependency (parent inherited) -->
 		<dependency>
 			<groupId>junit</groupId>
